--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,39 @@
 Package: CARE
-Title: An Amazing Shiny App
+Title: Criteria for AI-usage in REsearch
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
-License: What license is it under?
+Authors@R: person('Marton', 'Kovacs', email = 'marton.balazs.kovacs@gmail.com', role = c('cre', 'aut'))
+Description: Checklist for assessing responsible use of AI in research.
+License: MIT + file LICENSE
 Imports: 
+    base64enc,
+    bsplus,
     config (>= 0.3.1),
+    digest,
     golem (>= 0.4.1),
-    shiny (>= 1.7.4)
+    knitr,
+    markdown,
+    purrr,
+    RCurl,
+    rjson,
+    rmarkdown,
+    shiny (>= 1.7.4),
+    shinyanimate,
+    shinyBS,
+    shinycssloaders,
+    shinyFeedback,
+    shinyjs,
+    shinythemes,
+    shinyWidgets,
+    stringr
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
+URL: https://github.com/marton-balazs-kovacs/CARE
+BugReports: https://github.com/marton-balazs-kovacs/CARE/issues
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
+Depends: 
+    R (>= 2.10)
