--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -1,6 +1,6 @@
 default:
-  golem_name: CARE
-  golem_version: 0.0.0.9000
+  golem_name: CorePrinciplesGenAI
+  golem_version: 1.0.0
   app_prod: no
 production:
   app_prod: yes
