--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: CorePrinciplesGenAI
+Package: CorePrincipleGenAIChecklist
 Title: Core Principles of Responsible Generative AI Usage in Research Checklist
 Version: 1.0.0
 Authors@R: person('Marton', 'Kovacs', email = 'marton.balazs.kovacs@gmail.com', role = c('cre', 'aut'))
@@ -29,8 +29,8 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
-URL: https://github.com/marton-balazs-kovacs/CorePrinciplesGenAI
-BugReports: https://github.com/marton-balazs-kovacs/CorePrinciplesGenAI/issues
+URL: https://github.com/marton-balazs-kovacs/CorePrincipleGenAIChecklist
+BugReports: https://github.com/marton-balazs-kovacs/CorePrincipleGenAIChecklist/issues
 Suggests: 
     spelling,
     testthat (>= 3.0.0)
