--- a/inst/golem-config.yml
+++ b/inst/golem-config.yml
@@ -1,5 +1,5 @@
 default:
-  golem_name: CorePrinciplesGenAI
+  golem_name: CorePrincipleGenAIChecklist
   golem_version: 1.0.0
   app_prod: no
 production:
